--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "framer-motion": "^10.12.12",
+    "lodash": "^4.17.21",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
